Fix modal overflow/not centering bug

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body, html {
+    height: 100%;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -19,7 +23,7 @@ hr {
 
 .new-tag-blur-overlay {
     display: none;
-    position: absolute;
+    position: fixed;
     height: 100%;
     width: 100%;
     background: rgba(0, 0, 0, 0.6)
@@ -28,7 +32,7 @@ hr {
 .change-tag-blur-overlay {
     display: none;
     z-index: 2;
-    position: absolute;
+    position: fixed;
     height: 100%;
     width: 100%;
     background: rgba(0, 0, 0, 0.6)
@@ -383,9 +387,10 @@ td button:hover {
 
 .new-tag-modal {
     display: none;
-    position: absolute;
+    position: fixed;
     top: 40%;
     left: 50%;
+    margin: auto;
     transform: translate(-50%, -50%);
     width: 250px;
     height: 240px;
@@ -500,7 +505,7 @@ td button:hover {
 
 .change-tag-modal {
     display: none;
-    position: absolute;
+    position: fixed;
     z-index: 3;
     top: 40%;
     left: 50%;
